# case-manager-new

./: .gitignore  .pre-commit-config.yaml  .vercelignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  railway.toml  vercel.json
backend/: .env.example  .gitignore  Dockerfile  README.md  env.railway.example  insightcase.db-shm  pyproject.toml  railway.toml  requirements.txt
backend/alembic/: env.py  migration_util.py
backend/alembic/versions/: 70ed65093b89_initial_schema.py  a1b2c3d4e5f6_phase2_roles_features.py  a1b2c3d4e5f6_user_is_view_only.py  a1b2c3d4e5f7_report_rich_text.py  a2b3c4d5e6f7_parent_school_address.py  a9b0c1d2e3f4_user_read_permission.py  b0c1d2e3f4a5_user_secondary_contact.py  b2c3d4e5f6a7_invoice_billing_breakdown.py  b2c3d4e5f6g7_service_categories_and_profile_supervisor.py  c1d2e3f4a5b6_email_safety.py  (+54 more)
backend/app/: clinical_constants.py  main.py
backend/scripts/: check_pyproject_requirements.py  debug_billing_audit.py  debug_health.py  diagnose_invite_email.py  e2e_production_flow.py  import_production.py  migrate_production.py  migrate_staff_roles.py  production_api_flow_smoke.py  production_smoke.py  r2_smoke_test.py  railway_link_and_configure.example.sh  railway_set_frontend_cors.sh  railway_set_production_scale.sh  railway_set_vars_graphql.py  railway_smtp_env.example.sh  repair_production_schema.py  run_email_jobs.py  send_test_email.py  smtp_check.py  start-production.sh  strict_runtime_verification.py  test_safe_send_delivery.py  therapist_flow_smoke.py  verify_railway_token.sh
(+771 files in other folders)
